# summer

./: .gitignore  AUTHORS  ChangeLog  DESIGN  INSTALL  Makefile.am  NEWS  README  README.in  autogen.sh  configure.ac  gen-changelog.py  gtest.mk  libsummer-1.0-uninstalled.pc.in  libsummer-1.0.pc.in  libsummer-tests.mk  libsummer.mk  python.mk  shave-libtool.in  vala.mk
bindings/: Makefile.am
bindings/python/: Makefile.am  summer.defs  summer.override  summermodule.c
bindings/python/tests/: runner.py
bindings/vala/: Makefile.am  libsummer-1.0.vapi
bindings/vala/libsummer-1.0/: libsummer-1.0-custom.vala  libsummer-1.0.deps  libsummer-1.0.files  libsummer-1.0.gi  libsummer-1.0.metadata
docs/: Makefile.am
docs/reference/: Makefile.am
docs/reference/summer/: Makefile.am  libsummer-docs.sgml  libsummer-sections.txt  libsummer.types  version.xml.in
libsummer/: Makefile.am  setup-server.c  summer-atom-parser.c  summer-atom-parser.h  summer-data-types.c  summer-data-types.h  summer-debug.c  summer-debug.h  summer-download-torrent.cc  summer-download-torrent.h  summer-download-torrent.hh  summer-download-web.c  summer-download-web.h  summer-download-youtube.c  summer-download-youtube.h  summer-download.c  summer-download.h  summer-enum-types.c.template  summer-enum-types.h.template  summer-feed-cache-default.c  summer-feed-cache-default.h  summer-feed-cache.c  summer-feed-cache.h  summer-feed-parser.c  summer-feed-parser.h  summer-feed-rss.c  summer-feed-rss.h  summer-feed.c  summer-feed.h  summer-marshal.list  summer-rss2-parser.c  summer-rss2-parser.h  summer-transfer-speed.c  summer-transfer-speed.h  summer-web-backend-disk.c  summer-web-backend-disk.h  summer-web-backend-ram.c  summer-web-backend-ram.h  summer-web-backend.c  summer-web-backend.h  (+4 more)
libsummer/tests/: Makefile.am  atom_feed  atom_feed_nolink  epicfu  rss2sample.xml  server.c  server.h  test-atom-feed.c  test-debug.c  test-download-torrent.c  test-download-web.c  test-download-youtube.c  test-download.c  test-feed-cache.c  test-feed.c  test-rss2-feed.c  test-transfer-speed.c  test-web-backend.c  test-web.c  watch?v=SiYurfwzyuY
m4/: dolt.m4
reference/: Makefile.am  libsummer-docs.sgml  libsummer-sections.txt  libsummer.types
tests/: Makefile.am  test-basic-web-operations.c  test-init.c
