AC_INIT([libsummer], [0.1.0], [ozamosi@flukkost.nu], [libsummer])
AC_CONFIG_SRCDIR([libsummer/summer.h])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE

AC_CONFIG_MACRO_DIR(m4)

AC_PROG_CC
AC_PROG_LIBTOOL

GNOME_COMMON_INIT
GNOME_DOC_INIT
GNOME_MAINTAINER_MODE_DEFINES
GNOME_COMPILE_WARNINGS
GNOME_CXX_WARNINGS

GTK_DOC_CHECK(1.9)

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.18.0
LIBSOUP_REQUIRED=2.4

AM_PATH_GLIB_2_0($GLIB_REQUIRED,,,gobject gio gmodule)
if test "$GLIB_LIBS" = ""; then
	   AC_MSG_ERROR(GLIB $GLIB_REQUIRED or later is required to build libsoup)
fi
GLIB_CFLAGS="$GLIB_CFLAGS -DG_DISABLE_SINGLE_INCLUDES"

PKG_CHECK_MODULES(SOUP, libsoup-2.4 >= $LIBSOUP_REQUIRED)

AC_SUBST(SUMMER_CFLAGS)
AC_SUBST(SUMMER_LIBS)

AC_CONFIG_FILES([Makefile
	libsummer/Makefile
	libsummer/tests/Makefile
	libsummer-1.0.pc
	reference/Makefile
	tests/Makefile])

AC_OUTPUT
